# icetray-photospline

./: .mailinglist  CMakeLists.txt  README  RELEASE_NOTES  setup.py  vector_units.cmake
PSInterface/: .mailinglist  CMakeLists-v2.txt  CMakeLists.txt  LinkDef.h  Makefile.standalone  doxygen.mods  doxygen.steering
PSInterface/private/PSInterface/: PSI_Coordinate.cxx  PSI_Coordinate_PTD.cxx  PSI_Coordinate_Photonics.cxx  PSI_Dummy.cxx  PSI_FATInjector.cxx  PSI_PTD.cxx  PSI_Photonics.cxx  PSI_PhotonicsPhotorec.cxx  PSI_Photospline.cxx  PSInterface.cxx
PSInterface/private/pybindings/: CMakeLists.txt  PSInterface.cxx
PSInterface/private/test/: PSI_Coordinate_PTD_Tests.cxx  PSI_Coordinate_Photonics_Tests.cxx  PSI_Coordinate_Tests.cxx  PSI_Dummy_Tests.cxx  PSI_PhotonicsPhotorec.cxx
PSInterface/public/PSInterface/: PSI_Coordinate.h  PSI_Coordinate_PTD.h  PSI_Coordinate_Photonics.h  PSI_Dummy.h  PSI_FATInjector.h  PSI_Logging.h  PSI_PTD.h  PSI_Photonics.h  PSI_PhotonicsPhotorec.h  PSI_Photospline.h  PSInterface.h
PSInterface/resources/docs/: building.dox  psi.dox
PSInterface/resources/examples/: pybindings_example.py
PSInterface/resources/scripts/: Makefile  cowboyTest.C  directhits.C  psimaker.C  psimaker.h  simple.C  simplePh.C  simplePhotorec.C
cfitter/: Makefile  boxtest.c  cholesky_solve.c  cholesky_solve.h  dotests.sh  glam.c  glam.h  krontest.c  nnls.c  penaltytest.c  pyglam.c  rhotest.c  rhotest.m  splineutil.c  splineutil.h
fitter/: bspline.py  bsplinefit.py  bsplineinterp.py  bsplinetest.py  cluster-photospline.sh  glam-hist.py  glam-histverify.py  glam-photonics-spherical.py  glam-photonics.py  glam-photoverify.py  glam-test.py  glam.py  pbsplinetest.py  splinetable.py  stack-photonics.py
fitter/glam/: bspline.py  glam.py  glamhist.py  nnls.py  splinefitstable.py  splinetable.py  utils.py
fitter/pyphotonics/: __init__.py  photonics_table.py
lib/: bspline.c  bspline.h  dumpsplinefits.c  fitstable.c  logsplinepdf.c  logsplinepdf.h  splinetable.h  test.c
photo2numpy/: Makefile  photo2numpy.c  setup.py
private/: setup.cfg.example  setup.py
private/cfitter/: Makefile  cholesky_solve.c  cholesky_solve.h  dotests.sh  glam.c  glam.h  krontest.c  nnls.c  pyglam.c  rhotest.c  splineutil.c  splineutil.h
private/fitter/: bsplinefit.py  glam-photonics-spherical.py  glam-photonics.py  kyrre.py  stack-photonics.py
private/fitter/glam/: bspline.py  convolve.py  glamhist.py  numpy_extensions.py  splinefitstable.py  utils.py
private/fitter/pyphotonics/: photonics_table.py
private/lib/: I3SplineTable.cxx  bspline.c  bspline_multi.c  convolve.c  fitstable.c  splinepdf.c
private/photo2numpy/: hobo_mmap.h  photo2numpy.c
private/pybindings/: CMakeLists.txt  I3SplineTable.cxx  module.cxx
private/test/: ems_z0_a0.pt.abs.fits  ems_z0_a0.pt.prob.fits  main.cxx  test_bounds.cxx
private/util/: Makefile  dumpsplinefits.c  evalsplinefits.c
private/wfsampler/: wfsample_numpy.c
public/photospline/: I3SplineTable.h  bspline.h  splinepdf.h  splinetable.h
python/: __init__.py  numpy_extensions.py  photonics.py  splinefitstable.py  splinetable.py  utils.py
python/glam/: __init__.py  bspline.py  glam.py  glamhist.py  splinefitstable.py  splinetable.py  utils.py
python/pyphotonics/: __init__.py  photonics_table.py
resources/docs/: index.rst
resources/scripts/: bsplinefit.py  bsplineinterp.py  bsplinetest.py  glam-hist.py  glam-histverify.py  glam-photonics-spherical.py  glam-photonics.py  glam-photoverify.py  glam-test.py  kyrre.py  pbsplinetest.py  photoadd.py  stack-photonics.py
resources/test/: make_constant_spline.py
trunk/: .mailinglist  RELEASE_NOTES
util/: dumpsplinefits.c  evalsplinefits.c  test.c
wfsampler/: Makefile  logsplinepdf.c  test.py  wfsample_numpy.c
